<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:id="@+id/columns"
        android:text="@string/columns"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:id="@+id/num_columns"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/columns"
        android:layout_toEndOf="@+id/columns" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar_columns"
        android:layout_below="@id/columns" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_columns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rows"
            android:id="@+id/rows"
            android:textSize="@dimen/text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/num_rows"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:layout_toRightOf="@id/rows"
            android:layout_toEndOf="@id/rows"
            android:layout_above="@+id/bar_rows" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bar_rows"
            android:layout_below="@id/rows" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bar_rows"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bombs"
                android:id="@+id/bombs"
                android:textSize="@dimen/text_size"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/num_bombs"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_above="@+id/bar_bombs"
                android:layout_toRightOf="@+id/bombs"
                android:layout_toEndOf="@+id/bombs" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bar_bombs"
                android:layout_below="@id/bombs"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/bar_bombs"
                android:id="@+id/start_custom"
                android:text="@string/start_custom"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>


